# scenely_server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rebase-edit.ps1  requirements.txt  scenely.db
app/: __init__.py  config.py  main.py
app/api/routes/: auth.py  jobs.py  lessons.py  media.py  stt.py  uploads.py
app/api/schemas/: jobs.py  results.py
app/core/: __init__.py  auth.py  db.py  models.py
app/services/: deepgram_stt_service.py  ffmpeg_service.py  gcs_service.py  gemini_service.py  google_stt_service.py  s3_service.py  stt_service.py  transcript_service.py
app/utils/: file_cleanup.py  timeparse.py
app/workers/: __init__.py  celery_app.py  tasks.py
docs/: REDIS_USAGE.md  drop_legacy_tables.sql
